fix(Checkbox, Radio, Switch): fix text alignment

--- a/src/components/Switch/Switch.scss
+++ b/src/components/Switch/Switch.scss
@@ -6,12 +6,18 @@ $block: '.#{variables.$ns}switch';
     position: relative;
 
     &__control {
+        position: absolute;
+        inset: 0;
+        margin: 0;
+        padding: 0;
         opacity: 0;
-        cursor: pointer;
+        background: none;
+        border: none;
+        outline: none;
+        cursor: inherit;
     }
 
     &__indicator {
-        display: inline-block;
         position: relative;
 
         &::before {
@@ -21,11 +27,6 @@ $block: '.#{variables.$ns}switch';
 
             background-color: var(--g-color-base-generic-medium);
             transition: background 0.1s linear;
-        }
-
-        &::after {
-            content: '\00a0';
-            visibility: hidden;
         }
     }
 
@@ -49,6 +50,7 @@ $block: '.#{variables.$ns}switch';
 
     &__control:focus-visible + &__outline {
         outline: 2px solid var(--g-color-line-focus);
+        outline-offset: 1px;
     }
 
     &_loading {
@@ -119,10 +121,6 @@ $block: '.#{variables.$ns}switch';
                     border-width: 2px;
                 }
             }
-
-            #{$block}__text {
-                margin-block-start: 3px;
-            }
         }
 
         &_l {
@@ -145,10 +143,6 @@ $block: '.#{variables.$ns}switch';
                     height: 14px;
                     border-width: 2px;
                 }
-            }
-
-            #{$block}__text {
-                margin-block-start: 4px;
             }
         }
     }
